--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <i class="fas fa-times p-3 cursor-pointer text-white opacity-5 position-absolute end-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
     <a class="navbar-brand m-0" href=" https://demos.creative-tim.com/material-dashboard/pages/dashboard " target="_blank">
       <img src="./assets/img/logo-ct.png" class="navbar-brand-img h-100" alt="main_logo">
-      <span class="ms-1 font-weight-bold text-white"> TalentConnect</span>
+      <span class="ms-1 font-weight-bold text-white"> Kairos</span>
     </a>
   </div>
 
@@ -736,17 +736,10 @@
   <div class="container-fluid">
     <div class="row align-items-center justify-content-lg-between">
       <div class="col-lg-6 mb-lg-0 mb-4">
-        <div class="copyright text-center text-sm text-muted text-lg-start">
-          © <script>
-            document.write(new Date().getFullYear())
-          </script>,
-          made with <i class="fa fa-heart"></i> by
-          <a href="https://www.creative-tim.com" class="font-weight-bold" target="_blank">Creative Tim</a>
-          for a better web.
-        </div>
+        
       </div>
       <div class="col-lg-6">
-        <ul class="nav nav-footer justify-content-center justify-content-lg-end">
+        <!--<ul class="nav nav-footer justify-content-center justify-content-lg-end">
           <li class="nav-item">
             <a href="https://www.creative-tim.com" class="nav-link text-muted" target="_blank">Creative Tim</a>
           </li>
@@ -759,7 +752,7 @@
           <li class="nav-item">
             <a href="https://www.creative-tim.com/license" class="nav-link pe-0 text-muted" target="_blank">License</a>
           </li>
-        </ul>
+        </ul>-->
       </div>
     </div>
   </div>
